Bruker vilkår i detaljert resultat for finne perioder med alle vilkår oppfylt men uten tilkjent ytelse